# EngineDemo

./: CMakeLists.txt  README.md
contrib/msvc-2017-windows-x86/assimp/lib/: assimp-vc140-mt.lib
resources/objects/: cube.data  plane.data
resources/shaders/: depth.geo  simple.vert  simpleShader.txt
resources/shaders/shaderFiles/: medium.frag  medium.vert
src/engine/: Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  engine.h
src/game/: main.cpp
src/viridian/: Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  engine.h
